unpackaged/main/default/objects/CMPL123__Contact__c/CMPL123__Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts (Patients)</description>
    <label>Contact</label>
    <nameField>
        <displayFormat>CON-{0000000000}</displayFormat>
        <label>Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>