unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Age_at_Time_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Age_at_Time_of_Event__c</fullName>
        <description>Age at Time of Event</description>
        <label>Age at Time of Event</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>