unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Age_Units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Age_Units__c</fullName>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>