unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Aware_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Aware_Date__c</fullName>
        <label>Aware Date</label>
        <type>Date</type>
    </CustomField>