unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Birthdate__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </CustomField>