unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__CMPL123_WF_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>