unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactUsers</relationshipName>
        <type>Lookup</type>
    </CustomField>