unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__CMPL123_WF_Action_Performed_On__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </CustomField>