unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Address__c</fullName>
        <description>The address for which this contact is being recorded.</description>
        <label>Address</label>
        <referenceTo>CMPL123__Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>