unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Email__c</fullName>
        <description>Email address of contact associated with physical address.</description>
        <label>Email</label>
        <type>Email</type>
    </CustomField>