unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Fax__c</fullName>
        <description>Fax number of contact associated with address.</description>
        <label>Fax</label>
        <type>Phone</type>
    </CustomField>