unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Last_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Last_Name__c</fullName>
        <description>Last Name of contact associated with address.</description>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>