unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Notes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Notes__c</fullName>
        <description>Notes about contact</description>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>