unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Phone_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Phone_1__c</fullName>
        <description>Primary phone number of contact associated with address.</description>
        <label>Phone 1</label>
        <type>Phone</type>
    </CustomField>