unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Phone_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Phone_2__c</fullName>
        <description>2nd Phone number of contact associated with address.</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </CustomField>