unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Contact_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Contact_Type__c</fullName>
        <description>Type of contact, e.g. office admin, nurse, physician.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Admin</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>