unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Date_of_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </CustomField>