unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Patient_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Patient_ID__c</fullName>
        <label>Patient ID</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>