unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Weight__c</fullName>
        <label>Weight</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>