unpackaged/main/default/objects/CMPL123__Contact__c/fields/CMPL123__Weight_Units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>