unpackaged/main/default/objects/CMPL123__Contact__c/recordTypes/CMPL123__Patient.recordType-meta.xml
<RecordType>
        <fullName>CMPL123__Patient</fullName>
        <active>true</active>
        <description>Record type is Patient</description>
        <label>Patient</label>
    </RecordType>