unpackaged/main/default/objects/CMPL123__Contact__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>CMPL123__Contact_Address__c</columns>
        <columns>CMPL123__Contact_First_Name__c</columns>
        <columns>CMPL123__Contact_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>